# kilonova

./: .gitignore  Cargo.toml  README.md  x86_64-kilonova.json
.cargo/: config.toml
src/: gdt.rs  lib.rs  main.rs  mem.rs  serial.rs  test.rs  vga.rs  volatile.rs
src/int/: handlers.rs  mod.rs
tests/: basic_boot.rs  interrupt.rs
